--- a/meson.build
+++ b/meson.build
@@ -1,2 +1,9 @@
-project('npycomplex', 'c')
-executable('demo', 'main.c')
+project('npycomplex', 'cython')
+
+py = import('python').find_installation()
+dev_py = py.dependency()
+py.extension_module(
+    'main',
+    'main.pyx',
+    dependencies : dev_py,
+)
