Fix MSVC build issue
- Use "release" build type to avoid link error
- Avoid use of PYTHONPATH, the Windows terminal thinks that's a command
- Re-enable C build on Windows
- Some minor cleanups in meson.build files

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,13 +28,13 @@ jobs:
 
       - name: Build
         run: |
-          meson setup build
-          cd build
-          meson compile
+          meson setup build -Dbuildtype=release
+          meson compile -C build
 
       - name: Test Cython version
         run: |
-          PYTHONPATH=".\build\cython" python -c "import npycomplex; npycomplex.main()"
+          cd build/cython
+          python -c "import npycomplex; npycomplex.main()"
 
   build-unix:
     strategy:
