--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,6 +4,7 @@ on:
   push:
     branches:
       - main
+      - check-windows
 
 jobs:
   build-windows:
@@ -35,36 +36,4 @@ jobs:
         run: |
           cd build/cython
           python -c "import npycomplex; npycomplex.main()"
-
-  build-unix:
-    strategy:
-      matrix:
-        os: [ubuntu, macos]
-    name: Build & Test
-    runs-on: ${{ matrix.os }}-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-
-      - name: Set up target Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: "3.10"
-
-      - name: Install dependencies
-        run: python -m pip --disable-pip-version-check install meson ninja Cython numpy
-
-      - name: Build
-        run: |
-          meson setup build
-          cd build
-          meson compile
-
-      - name: Test C version
-        run: ./build/c/npycomplex
-        
-
-      - name: Test Cython version
-        run: |
-          PYTHONPATH="./build/cython" python -c "import npycomplex; npycomplex.main()"
 
