--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,7 +29,7 @@ jobs:
 
       - name: Build
         run: |
-          meson setup build -Dbuildtype=release
+          meson setup build
           meson compile -C build
 
       - name: Test Cython version
